# mlops-basic

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.aws/: credentials
airflow/: airflow.cfg
airflow/dags/: multimodel_dag.py  multimodel_mlflow_dag.py  onemodel_dag.py
notebooks/: load_data.ipynb  training_models.ipynb
